--- a/src/AppBundle/Resources/views/Schedule/list.html.twig
+++ b/src/AppBundle/Resources/views/Schedule/list.html.twig
@@ -39,7 +39,7 @@
         </thead>
     </table>
 
-    {{ include ('@App/Region/add_modal.html.twig', {'form' : form}) }}
+    {{ include ('@App/Schedule/add_modal.html.twig', {'form' : form}) }}
 {% endblock %}
 
 {% block javascript %}
