Fix: trip remove dont work

--- a/src/AppBundle/Resources/views/Schedule/list.html.twig
+++ b/src/AppBundle/Resources/views/Schedule/list.html.twig
@@ -95,7 +95,7 @@
                         "orderable": false
                     },
                 ],
-            }, "{{ path('delete_region') }}");
+            }, "{{ path('delete_trip') }}");
 
 
         })
